tests/error/alias_errors/recursive.err
Error: Recursive type alias (at $FILE:4:0)
  | 
2 | 
3 | 
4 | MyAlias = guppy.type_alias("MyAlias")
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Type alias `MyAlias` expands to itself

Help: Type aliases cannot be recursive. Replace the cyclic aliases with a
concrete type.

Guppy compilation failed due to 1 previous error
